--- a/index.html
+++ b/index.html
@@ -19,6 +19,59 @@
   </header>
 
   <section class="intro">
+    <section class="problemas">
+      <h2>¿Por qué necesitas VeryPago?</h2>
+      <div class="problema-lista">
+        <div class="problema">
+          <h3>📸 Capturas falsas</h3>
+          <p>Algunos clientes muestran imágenes editadas o pagos antiguos. VeryPago valida en tiempo real.</p>
+        </div>
+        <div class="problema">
+          <h3>📱 Revisar el celular todo el día</h3>
+          <p>Estás expuesto a robos y errores. VeryPago muestra el pago automáticamente sin tocar tu teléfono.</p>
+        </div>
+        <div class="problema">
+          <h3>👨‍🍳 Manos ocupadas</h3>
+          <p>Si eres pescadero, pollero o estás en cocina, no puedes revisar el celular constantemente.</p>
+        </div>
+        <div class="problema">
+          <h3>👀 El dueño no siempre está</h3>
+          <p>Ya no necesitas que tu trabajador te envíe capturas para confirmar. VeryPago lo muestra al instante.</p>
+        </div>
+      </div>
+    </section>
+    <section class="problema-caso">
+      <h2>📸 Capturas falsas</h2>
+      <div class="caso-grid">
+        <div class="caso">
+          <h3>Sin VeryPago</h3>
+          <img src="img/captura-falsa.png" alt="Captura falsa">
+          <p>Clientes pueden mostrar imágenes editadas. El vendedor duda.</p>
+        </div>
+        <div class="caso">
+          <h3>Con VeryPago</h3>
+          <img src="img/pago-confirmado.png" alt="Pago confirmado">
+          <p>VeryPago muestra el pago real al instante. No hay engaños.</p>
+        </div>
+      </div>
+    </section>
+    <section class="problema-caso">
+      <h2>👨‍🍳 ¿Y si tienes las manos ocupadas?</h2>
+      <div class="caso-grid">
+        <div class="caso">
+          <h3>Sin VeryPago</h3>
+          <img src="img/manos-ocupadas-problema.png" alt="Problema: Manos ocupadas">
+          <p>No puedes revisar tu celular mientras cocinas o atiendes. Eso genera dudas y demoras.</p>
+        </div>
+        <div class="caso">
+          <h3>Con VeryPago</h3>
+          <img src="img/manos-ocupadas-solucion.png" alt="Solución: Confianza con VeryPago">
+          <p>El visor muestra el pago al instante. Tú sigues trabajando con tranquilidad. ✅</p>
+        </div>
+      </div>
+    </section>
+        
+    
     <h2>¿Qué es VeryPago?</h2>
     <p>VeryPago es un visor inteligente que valida tus cobros móviles en tiempo real. Evita fraudes, errores y acelera la atención en tu negocio.</p>
   </section>
