Prir commit de verypago2

--- a/index.html
+++ b/index.html
@@ -70,7 +70,21 @@
         </div>
       </div>
     </section>
-        
+    <section class="problema-caso">
+      <h2>🧑‍💼 ¿Y si el jefe no está?</h2>
+      <div class="caso-grid">
+        <div class="caso">
+          <h3>Sin VeryPago</h3>
+          <img src="img/jefe-no-esta-problema.png" alt="Problema: El jefe no está">
+          <p>El trabajador debe enviar capturas por WhatsApp. El cliente espera molesto.</p>
+        </div>
+        <div class="caso">
+          <h3>Con VeryPago</h3>
+          <img src="img/jefe-no-esta-solucion.png" alt="Solución: Pago validado automáticamente">
+          <p>VeryPago valida el pago al instante. No importa si el jefe está o no.</p>
+        </div>
+      </div>
+    </section>    
     
     <h2>¿Qué es VeryPago?</h2>
     <p>VeryPago es un visor inteligente que valida tus cobros móviles en tiempo real. Evita fraudes, errores y acelera la atención en tu negocio.</p>
