Primer commit de verypago2

--- a/index.html
+++ b/index.html
@@ -100,5 +100,13 @@
   <footer>
     <p>&copy; 2025 VeryPago</p>
   </footer>
+  <a href="https://wa.me/51982141988?text=Hola%20quiero%20VeryPago%20para%20mi%20negocio" 
+  class="whatsapp-float" 
+  target="_blank" 
+  aria-label="Chat en WhatsApp">
+ <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp">
+</a>
+
+
 </body>
 </html>
