Primer commit de verypago2

--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
     </section>    
     
     <h2>¿Qué es VeryPago?</h2>
+    <section class="verypago-dispositivo">
+      <h2 class="titulo-elegante">Así se ve VeryPago en acción</h2>
+      <img src="img/verypago-dispositivo.png" alt="Dispositivo VeryPago con logo" class="dispositivo-imagen">
+    </section>
+    
     <p>VeryPago es un visor inteligente que valida tus cobros móviles en tiempo real. Evita fraudes, errores y acelera la atención en tu negocio.</p>
   </section>
 
